# MFLOPS3D-MD

./: .gitignore  CMakeLists.txt  README  bin  conv.out  run.sh  sub1.cmd  sub2.cmd
CMake/: FindBLAS.cmake  FindLAPACK.cmake  FindNetCDF.cmake
src/class_derivatives/: class_derivatives.f90  class_derivatives_coefficient.f90  class_derivatives_coefficient_nonlin.f90.SAV  minpack.f
src/class_field/: class_field.f90  class_field.f90.1
src/class_filter/: LSQUnivariateSpline.f90  a.out  class_filter.f90  dierckx.f  ls_spline_1d.f90
src/class_io/: class_io.f90  class_io_old.f90
src/class_mapping/: class_mapping.f90
src/class_md/: class_md.f90  class_md.f90.1
src/class_mesh/: class_mesh.f90
src/class_navier/: class_navier_3D.1.f90  class_navier_3D.f90  class_navier_3D_mapping.f90
src/class_solver/: class_solver_1d.f90  class_solver_3d.f90  class_solver_3d_SAUV.f90  class_solver_coefficient_1d.f90  class_solver_coefficient_3d.f90  class_solver_coefficient_3d_SAUV.f90
src/main/: navier3d.f90  parameters.f90  post_prod.f90  test_deriv_stretching.f90  test_derivatives.f90  test_derivatives_omp.f90  test_io.f90  test_md.f90  test_operators.f90  test_solver_1d.f90  test_solver_3d.f90
src/precision/: precision.f90
src/utils/: color_print.f90  command_line.f90
